@@ -3,6 +3,8 @@ cm4all-beng-proxy (0.2) unstable; urgency=low
   * don't quote text/xml widgets
   * widget-resolver: pass widget_pool to widget_class_lookup()
   * widget-registry: allocate widget_class from widget_pool
+  * widget-stream: eliminated the async operation proxy, because the
+    operation cannot be aborted before the constructor returns
   * rewrite-uri: trigger istream_read(delayed) after istream_delayed_set()
   * doc: clarified XSLT integration
 
